[package]
name = "oxipng-wasm"
authors = ["Valter Kraemer"]
description = "Use oxipng from JavaScript"
version = "0.1.0"
license = "SEE LICENSES IN LICENSE AND LICENSE-THIRD-PARTY"
repository = "https://github.com/valterkraemer/oxipng-wasm"
edition = "2021"

[dependencies]
oxipng = {version = "8.0.0", features = ["freestanding"], default-features = false }
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib", "rlib"]
